--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-06-15         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkinet.texi: Small fixes, and revise the indexing to use
+	new Texinfo features.
+
 2020-06-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkworkflow.texi: Revise indexing to use new Texinfo features.
