By request, remove an email address from the ChangeLog.

--- a/ChangeLog
+++ b/ChangeLog
@@ -81,7 +81,7 @@
 
 	* awk.h (INSTRUCTION): Make dl a long long for profiling
 	counts on 32 bit systems. Thanks to Peter Lindgren
-	<lindgren@ameritech.net> for the report.
+	for the report.
 	* profile.c (indent): Take a long long parameter and fix
 	the printf format.
 
