Fixes in gawk.1.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-06-25         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawk.1: Applied some more troff "lint" fixes.
+	Thanks to Bjarni Ingi Gislason <bjarniig@rhi.hi.is>.
+
 2020-06-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkworkflow.texi: Revise indexing to use new Texinfo features.
