Update in TODO.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-Fri Jun 12 10:46:43 IDT 2020
+Sun Jun 28 08:49:16 IDT 2020
 ============================
 
 There were too many files tracking different thoughts and ideas for
@@ -26,6 +26,9 @@ Minor Cleanups and Code Improvements
 
 	Fully synchronize whitespace tests (for \s, \S in Unicode
 	environment) with those of GNU grep.
+
+	Lint option which would allow extensions and only complain
+	about genuine errors.
 
 	Message cleanup:
 	* Messages in debug.c start with capital letters, but not in
