Add instruction trace option.

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,9 @@ Changes from 5.0.1 to 5.0.2
    second destination array is supplied. Similarly, using either array as
    the second argument is now a fatal error.
 
+3. The new -I/--trace option prints a trace of the byte codes as they
+   are executed.
+
 Changes from 5.0.1 to 5.1.0
 ---------------------------
 
