--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,14 @@
 	* eval.c (posix_compare): Rewrite contributed by
 	Michael Builov <mbuilov@gmail.com>.
 
+	Unrelated:
+
+	* awk.h: New option: do_itrace.
+	* interpret.h (r_interpret): Print instruction trace if enabled.
+	* main.c (optab): New option: -I/--trace.
+	(parse_args): Update optlist and the code to handle it.
+	* NEWS: Updated.
+
 2020-06-29         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* debug.c: Cleanup messages. Error messages start with lower
