--- a/doc/gawk.1
+++ b/doc/gawk.1
@@ -13,7 +13,7 @@
 .		if \w'\(rq' .ds rq "\(rq
 .	\}
 .\}
-.TH GAWK 1 "Mar 23 2020" "Free Software Foundation" "Utility Commands"
+.TH GAWK 1 "Jul 2 2020" "Free Software Foundation" "Utility Commands"
 .SH NAME
 gawk \- pattern scanning and processing language
 .SH SYNOPSIS
@@ -319,6 +319,17 @@ the main program source.
 Files read with
 .B \-\^\-include
 are treated as if they begin with an implicit \fB@namespace "awk"\fR statement.
+.TP
+.PD 0
+.BI \-I
+.TP
+.PD
+.B \-\^\-trace
+Print the internal byte code names as they are executed when running
+the program. The trace is printed to standard error. Each ``op code''
+is preceded by a
+.B +
+sign in the output.
 .TP
 .PD 0
 .BI "\-l " lib
