--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -2,6 +2,10 @@
 
 	* Makefile.am (EXTRA_DIST): New test, posix_compare.
 	* posix_compare.awk, posix_compare.ok: New files.
+	
+	Unrelated:
+
+	* badargs.ok: Updated after code changes.
 
 2020-06-29         Arnold D. Robbins     <arnold@skeeve.com>
 
