Add $(GAWK_TEST_ARGS) to tests so we can run them with -M.

--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,8 @@
+2020-07-06         Andrew J. Schorr      <aschorr@telemetry-investments.com>
+
+	* Makefile.am (AWK): Append $(GAWK_TEST_ARGS) to enable running
+	tests with -M enabled for MPFR debugging.
+
 2020-07-05         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): New tests, mpfrcase, mpfrnonum.
