--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-07-07         Andrew J. Schorr      <aschorr@telemetry-investments.com>
+
+	* node.c (r_dupnode): Sanitize the code, particularly for MPFR.
+
 2020-07-05         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Bug fixes in MPFR, reported by Hyunho Cho<mug896@naver.com>.
