--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-07-07         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awk.h: Turn all the flag defines into enums. GDB can then show
+	the bit maps directly.
+
 2020-07-07         Andrew J. Schorr      <aschorr@telemetry-investments.com>
 
 	* node.c (r_dupnode): Sanitize the code, particularly for MPFR.
