Fix printfchar test for -M.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-07-08         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* str_array.c (str_lookup): If a pure number, copy to a string. Fixes
+	at least printfchar test for MPFR, possibly some others.
+
 2020-07-07         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awk.h: Turn all the flag defines into enums. GDB can then show
