--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2020-07-09         Arnold D. Robbins     <arnold@skeeve.com>
+
+	Fix dbugeval2 test for MPFR.
+
+	* debug.c (do_eval): Preserve DO_MPFR flag in do_flags before
+	parsing the string to be evaluated.
+
 2020-07-08         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* str_array.c (str_lookup): If a pure number, copy to a string. Fixes
