Update aux files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,10 @@
 	* awkgram.y (lookup_builtin): Only return the MPFR builtin
 	function if the pointer is not NULL.
 
+	Unrelated:
+
+	* config.guess, config.sub: Updated from GNULIB.
+
 2020-07-08         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* str_array.c (str_lookup): If a pure number, copy to a string. Fixes
