Update the Korean translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2020-07-12         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* ko.po: Updated.
+
 2020-05-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* sv.po: Updated.
