Note NEWS updated.

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@
 	* interpret.h (r_interpret): At Op_ext_builtin, separate out calls
 	to the external function and awk_value_to_node, for ease in a
 	debugger.
+	* NEWS: Updated.
 
 2020-07-10         Arnold D. Robbins     <arnold@skeeve.com>
 	
