--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,9 @@
+2020-07-13         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in (General Data Types): Document that MPFR
+	data types are copied and have to be freed in the
+	extension.
+
 2020-07-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawk.1, gawktexi.in: Document -I/--trace option.
