--- a/extension/ChangeLog
+++ b/extension/ChangeLog
@@ -1,3 +1,9 @@
+2020-07-13         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* intdiv.c (do_intdiv): Release the quotient and remainder
+	values when done with them. Fixes a memory leak. Thanks to
+	Andrew Schorr and valgrind for the report.
+
 2020-06-10         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Miscellanious fixes from Michael Builov <mbuilov@gmail.com>.
