Small speedup in mpg_interpret.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-07-13         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* mpfr.c (mpg_interpret): Small speedup. If do_itrace and opcode is
+	not one that's handled, return early.
+
 2020-07-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* mpfr.c (mpg_interpret): Make the instruction tracing more sane.
