Finish up MPFR valgrind issues.

--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,10 @@ Changes from 5.0.1 to 5.0.2
 4. A number of subtle bugs relating to MPFR mode that caused differences
    between regular operation and MPFR mode have been fixed.
 
+5. The API now handles MPFR/GMP values slightly differently, requiring
+   different memory management for those values. See the manual for the
+   details if you have an extension using those values.
+
 Changes from 5.0.1 to 5.1.0
 ---------------------------
 
