--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-07-15         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Document how to handle MPFR and GMP values
+	from an extension function.
+
 2020-07-13         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in (General Data Types): Document that MPFR
