Update build aux.

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,10 @@
 	* node.c (nextfree): Remove mpfr and mpz entries.
 	* NEWS: Updated.
 
+	Unrelated:
+
+	* config.guess, config.sub: Updated from GNULIB.
+
 2020-07-13         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* mpfr.c (mpg_interpret): Small speedup. If do_itrace and opcode is
