--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -3,6 +3,10 @@
 	* gawktexi.in: Document how to handle MPFR and GMP values
 	from an extension function.
 
+	Unrelated:
+
+	* texinfo.tex: Updated from GNULIB.
+
 2020-07-13         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in (General Data Types): Document that MPFR
