--- a/extension/build-aux/ChangeLog
+++ b/extension/build-aux/ChangeLog
@@ -1,3 +1,7 @@
+2020-07-15         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* config.guess, config.sub: Updated from GNULIB.
+
 2020-07-09         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* config.guess, config.sub: Updated from GNULIB.
