Fix heading in NEWS.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2020-07-19         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* NEWS: Fix title on leading set of changes. Thanks to
+	Marcus <marcuscruse@ya.ru> for the report.
+
+2020-07-17         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkapi.h (gawk_api_minor_version): Increase, since the
+	MPFR/MPZ stuff changed some.  Remains source and binary
+	compatible, but semantics are different.
+
 2020-07-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Finish cleaning up MPFR valgrind issues.
