--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@
 	* NEWS: Fix title on leading set of changes. Thanks to
 	Marcus <marcuscruse@ya.ru> for the report.
 
+	Unrelated: Bump minor API version since semantics have changed.
+
+	* gawkapi.h (api_minor_version): Increase to 1.
+
 2020-07-17         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkapi.h (gawk_api_minor_version): Increase, since the
