Fix a typo in mpfr.c.

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,10 @@
 
 	* gawkapi.h (api_minor_version): Increase to 1.
 
+	Unrelated: Fix a spelling error in a comment.
+
+	* mpfr.c (force_mpnum): Fix a typo.
+
 2020-07-17         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkapi.h (gawk_api_minor_version): Increase, since the
