Update to gettext 0.20.2.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-07-20  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.20.2.
+
 2020-07-19         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* NEWS: Fix title on leading set of changes. Thanks to
