--- a/extension/ChangeLog
+++ b/extension/ChangeLog
@@ -1,3 +1,7 @@
+2020-07-20  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.20.2.
+
 2020-07-13         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* intdiv.c (do_intdiv): Release the quotient and remainder
