--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,12 @@
+2020-07-20  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.20.2.
+	* Rules-quot: Upgrade to gettext-0.20.2.
+	* en@boldquot.header: Upgrade to gettext-0.20.2.
+	* en@quot.header: Upgrade to gettext-0.20.2.
+	* insert-header.sin: Upgrade to gettext-0.20.2.
+	* remove-potcdate.sin: Upgrade to gettext-0.20.2.
+
 2020-07-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* ko.po: Updated.
