--- a/NEWS
+++ b/NEWS
@@ -7,7 +7,7 @@
 Changes from 5.1.0 to 5.1.1
 ---------------------------
 
-1. Infrastructure upgrades: Bison 3.6.3.
+1. Infrastructure upgrades: Bison 3.6.3, Gettext 0.20.2.
 
 2. asort and asorti now allow FUNCTAB and SYMTAB as the first argument if a
    second destination array is supplied. Similarly, using either array as
