--- a/m4/ChangeLog
+++ b/m4/ChangeLog
@@ -1,3 +1,16 @@
+2020-07-20  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* gettext.m4: Upgrade to gettext-0.20.2.
+	* host-cpu-c-abi.m4: New file, from gettext-0.20.2.
+	* iconv.m4: Upgrade to gettext-0.20.2.
+	* intlmacosx.m4: Upgrade to gettext-0.20.2.
+	* lib-ld.m4: Upgrade to gettext-0.20.2.
+	* lib-link.m4: Upgrade to gettext-0.20.2.
+	* lib-prefix.m4: Upgrade to gettext-0.20.2.
+	* nls.m4: Upgrade to gettext-0.20.2.
+	* po.m4: Upgrade to gettext-0.20.2.
+	* progtest.m4: Upgrade to gettext-0.20.2.
+
 2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 5.1.0: Release tar ball made.
